--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xserver-xorg-input-vmmouse (12.4.0-3) UNRELEASED; urgency=low
+
+  * Add link to xserver-xorg-core bug script, so that bugreports contain
+    the user's config and log files.
+  * Bump dependency on xserver-xorg-core to >= 2:1.1.1-11, as previous
+    versions don't have the bug script.
+
+ -- Julien Cristau <julien.cristau@ens-lyon.org>  Tue,  7 Nov 2006 07:30:39 +0100
+
 xserver-xorg-input-vmmouse (12.4.0-2) unstable; urgency=low
 
   * Restrict to Architecture: i386 amd64, since vmmouse_proto.h
