--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,19 @@
 xserver-xorg-input-vmmouse (12.4.0-3) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Add link to xserver-xorg-core bug script, so that bugreports contain
     the user's config and log files.
   * Generate the dependency on xserver-xorg-core automatically.
 
- -- Julien Cristau <jcristau@debian.org>  Sun, 18 Feb 2007 20:10:33 +0100
+  [ Brice Goglin ]
+  * Install the upstream changelog.
+  * Bump Build-Depends: xserver-xorg-dev to >= 2:1.2.99.902
+    (needed to let xsfbs get access to serverminver).
+  * Add XS-Vcs-*.
+  * Add a link to www.X.org and a reference to the xf86-input-vmmouse
+    module in the long description.
+
+ -- Brice Goglin <Brice.Goglin@ens-lyon.org>  Wed, 25 Apr 2007 01:03:55 +0200
 
 xserver-xorg-input-vmmouse (12.4.0-2) unstable; urgency=low
 
