Add copyright statement to man page.

--- a/man/vmmouse.man
+++ b/man/vmmouse.man
@@ -43,3 +43,5 @@ man page for details on these options.
 .SH "SEE ALSO"
 __xservername__(1), __xconfigfile__(__filemansuffix__), xorgconfig(1), Xserver(1), X(__miscmansuffix__),
 mouse(__drivermansuffix__)
+.SH AUTHORS
+Copyright (c) 1999-2007 VMware, Inc.
