--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xserver-xorg-input-vmmouse (1:12.4.1-1) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.4.2-1) UNRELEASED; urgency=low
 
   [ Julien Cristau ]
   * Add link to xserver-xorg-core bug script, so that bugreports contain
@@ -18,7 +18,7 @@ xserver-xorg-input-vmmouse (1:12.4.1-1) UNRELEASED; urgency=low
   [ Timo Aaltonen ]
   * Bump the epoch so that this can be synced to Ubuntu in the future.
 
- -- Timo Aaltonen <tjaalton@cc.hut.fi>  Fri,  4 May 2007 17:03:42 +0300
+ -- Brice Goglin <bgoglin@debian.org>  Tue, 11 Sep 2007 23:58:50 +0200
 
 xserver-xorg-input-vmmouse (12.4.0-2) unstable; urgency=low
 
