--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ xserver-xorg-input-vmmouse (1:12.4.2-1) UNRELEASED; urgency=low
 
   [ Brice Goglin ]
   * New upstream release.
-  * Add 11_fix_configure_version.diff
+  * Drop 10_man_vmmouse_not_mouse, since upstream fixed the manpage.
   * Install the upstream changelog.
   * Bump Build-Depends: xserver-xorg-dev to >= 2:1.2.99.902
     (needed to let xsfbs get access to serverminver).
