--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xserver-xorg-input-vmmouse (1:12.4.2-1) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.4.2-1) experimental; urgency=low
 
   [ Julien Cristau ]
   * Add link to xserver-xorg-core bug script, so that bugreports contain
