--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.4.2-2) UNRELEASED; urgency=low
+
+  * Fix upstream URL in debian/copyright.
+
+ -- Brice Goglin <bgoglin@debian.org>  Sat, 15 Sep 2007 01:49:07 +0200
+
 xserver-xorg-input-vmmouse (1:12.4.2-1) experimental; urgency=low
 
   [ Julien Cristau ]
