* Upload to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.4.2-3) unstable; urgency=low
+
+  * Upload to unstable
+
+ -- David Nusinow <dnusinow@debian.org>  Sun, 16 Sep 2007 15:13:40 -0400
+
 xserver-xorg-input-vmmouse (1:12.4.2-2) UNRELEASED; urgency=low
 
   * Fix upstream URL in debian/copyright.
