--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.4.3-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Drew Parsons <dparsons@debian.org>  Mon, 29 Oct 2007 01:24:59 +1100
+
 xserver-xorg-input-vmmouse (1:12.4.2-3) unstable; urgency=low
 
   * Upload to unstable
