--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-xserver-xorg-input-vmmouse (1:12.4.3-2) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.4.3-2) unstable; urgency=low
 
+  [ Julien Cristau ]
   * Scale input events, as X 1.4 doesn't do that itself anymore.
     Patch by Joerg Platte <jplatte@naasa.net> (closes: #442853).
 
- -- Julien Cristau <jcristau@debian.org>  Thu, 03 Jan 2008 15:10:01 +0100
+  [ Brice Goglin ]
+  * Drop XS- prefixes from XS-Vcs* fields.
+
+ -- Brice Goglin <bgoglin@debian.org>  Thu, 17 Jan 2008 22:32:08 +0100
 
 xserver-xorg-input-vmmouse (1:12.4.3-1) unstable; urgency=low
 
