--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xserver-xorg-input-vmmouse (1:12.5.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+  * Drop patch vmmouse_scale_input_data.diff, this should be fixed upstream
+    now.
+
+ -- Julien Cristau <jcristau@debian.org>  Fri, 21 Mar 2008 21:32:47 +0100
+
 xserver-xorg-input-vmmouse (1:12.4.3-2) unstable; urgency=low
 
   [ Julien Cristau ]
