--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,13 @@ xserver-xorg-input-vmmouse (1:12.5.1-1) UNRELEASED; urgency=low
   * New upstream release.
     + Disable vmmouse_scale_input_data.diff since the corresponding
       upstream fix has been applied.
+  * Bump Standards-Version to 3.7.3 (no changes).
+  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
+    /usr/bin/Xorg and other modules, and that's not a bug, so we want
+    dpkg-shlibdeps to shut up about symbols it can't find.
+    + Build-depend on dpkg-dev >= 1.14.17.
 
- -- Brice Goglin <bgoglin@debian.org>  Wed, 28 May 2008 22:33:51 +0200
+ -- Brice Goglin <bgoglin@debian.org>  Wed, 28 May 2008 22:40:43 +0200
 
 xserver-xorg-input-vmmouse (1:12.4.3-2) unstable; urgency=low
 
