--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xserver-xorg-input-vmmouse (1:12.5.1-1) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.5.1-1) unstable; urgency=low
 
   * New upstream release.
     + Disable vmmouse_scale_input_data.diff since the corresponding
@@ -9,7 +9,7 @@ xserver-xorg-input-vmmouse (1:12.5.1-1) UNRELEASED; urgency=low
     dpkg-shlibdeps to shut up about symbols it can't find.
     + Build-depend on dpkg-dev >= 1.14.17.
 
- -- Brice Goglin <bgoglin@debian.org>  Wed, 28 May 2008 22:40:43 +0200
+ -- Brice Goglin <bgoglin@debian.org>  Wed, 28 May 2008 22:41:25 +0200
 
 xserver-xorg-input-vmmouse (1:12.4.3-2) unstable; urgency=low
 
