--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xserver-xorg-input-vmmouse (1:12.5.1-4) unstable; urgency=low
+
+  * I need a brown paper bag; autoreconf so the patch added in -3 is actually
+    used…
+
+ -- Julien Cristau <jcristau@debian.org>  Tue, 21 Oct 2008 10:48:19 +0200
+
 xserver-xorg-input-vmmouse (1:12.5.1-3) unstable; urgency=low
 
   * Cherry-pick from upstream: Properly set axis range and resolution for
