--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ xserver-xorg-input-vmmouse (1:12.6.3-1) UNRELEASED; urgency=low
   * Handle parallel builds.
   * Install a detection program, a hal fdi file and a callout script for X
     input hotplug.
+  * Don't override the manpage suffix, it should be vmmouse(4) not
+    vmmouse(4x).
 
  -- Julien Cristau <jcristau@debian.org>  Fri, 21 Mar 2008 21:32:47 +0100
 
