--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ xserver-xorg-input-vmmouse (1:12.6.3-1) UNRELEASED; urgency=low
     input hotplug.
   * Don't override the manpage suffix, it should be vmmouse(4) not
     vmmouse(4x).
+  * Build against xserver 1.6 rc1.
 
  -- Julien Cristau <jcristau@debian.org>  Fri, 21 Mar 2008 21:32:47 +0100
 
