--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.6.4-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Brice Goglin <bgoglin@debian.org>  Mon, 11 May 2009 20:06:53 +0200
+
 xserver-xorg-input-vmmouse (1:12.6.3-2) unstable; urgency=low
 
   * Upload to unstable.
