--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-xserver-xorg-input-vmmouse (1:12.6.4-1) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.6.4-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Brice Goglin <bgoglin@debian.org>  Mon, 11 May 2009 20:06:53 +0200
+ -- Brice Goglin <bgoglin@debian.org>  Mon, 11 May 2009 20:13:16 +0200
 
 xserver-xorg-input-vmmouse (1:12.6.3-2) unstable; urgency=low
 
