Build against Xserver 1.7.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.6.5-2) UNRELEASED; urgency=low
+
+  * Build against Xserver 1.7.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 02:06:47 +0200
+
 xserver-xorg-input-vmmouse (1:12.6.5-1) unstable; urgency=low
 
   * New upstream release.
