--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.6.5-4) UNRELEASED; urgency=low
+
+  * Add 10-vmmouse.conf.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 30 Mar 2010 16:01:35 +0300
+
 xserver-xorg-input-vmmouse (1:12.6.5-3) unstable; urgency=low
 
   [ Julien Cristau ]
