man: move vmmouse_detect back to section 1
Was moved to section 4 in commit 36c2cd8ec6d3bf7191a98a04a876e8d7b6f64d5d,
"man: build vmmouse_detect man page".

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/man/vmmouse_detect.man
+++ b/man/vmmouse_detect.man
@@ -18,7 +18,7 @@
 .\"
 .\" That's right, although mdetect itself is under the QPL, this manpage is
 .\" under the GPL.  Enjoy!
-.TH vmmouse_detect __drivermansuffix__ __vendorversion__
+.TH vmmouse_detect __appmansuffix__ __vendorversion__
 .SH NAME
 vmmouse_detect \- VMware mouse device autodetection tool
 .SH SYNOPSIS
