--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xserver-xorg-input-vmmouse (1:12.6.9-1) UNRELEASED; urgency=low
+
+  * New upstream release
+    - Adds InputClass support
+
+ -- Julien Cristau <jcristau@debian.org>  Sat, 17 Apr 2010 01:11:13 +0200
+
 xserver-xorg-input-vmmouse (1:12.6.5-4) unstable; urgency=low
 
   * Add 10-vmmouse.conf.
