--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xserver-xorg-input-vmmouse (1:12.6.9-1) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.6.9-1) unstable; urgency=low
 
   [ Julien Cristau ]
   * New upstream release
@@ -11,7 +11,7 @@ xserver-xorg-input-vmmouse (1:12.6.9-1) UNRELEASED; urgency=low
   * Add myself to Uploaders.
   * Bump Standards-Version from 3.8.3 to 3.8.4 (no changes needed).
 
- -- Julien Cristau <jcristau@debian.org>  Sat, 17 Apr 2010 01:11:13 +0200
+ -- Cyril Brulebois <kibi@debian.org>  Sat, 17 Apr 2010 21:50:29 +0200
 
 xserver-xorg-input-vmmouse (1:12.6.5-4) unstable; urgency=low
 
