--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,44 @@
+commit 833698b3b9857fda176c91a0dbb128275a174624
+Author: Gaetan Nadon <memsize@videotron.ca>
+Date:   Sun Apr 25 19:36:19 2010 -0400
+
+    config: git ignore recently added 69-xorg-vmmouse.rules
+    
+    Was added in 1d1c0514158abb66388ee4eb44764d201203a863
+    
+    Signed-off-by: Gaetan Nadon <memsize@videotron.ca>
+
+commit 1d1c0514158abb66388ee4eb44764d201203a863
+Author: Jakob Bornecrantz <jakob@vmware.com>
+Date:   Mon Apr 19 15:29:41 2010 +0100
+
+    Only match against event[0-9] in udev rules
+    
+    It looks like the udev rule was matched against two devices which caused
+    the driver to be loaded twice. We shouldn't match against the other
+    device because it will very seldom send bogus events. Some of the bug
+    this caused was buttons getting stuck.
+
+commit b22d830a4e1c609a709e71c306a3b3a8ff8a6078
+Author: Julien Cristau <jcristau@debian.org>
+Date:   Sat Apr 17 01:39:23 2010 +0200
+
+    Don't clobber CFLAGS
+    
+    CFLAGS is a user variable, don't set it from configure.
+
+commit 1cba87aab183eb3846757a0ee0828e3eb119a6e6
+Author: Julien Cristau <jcristau@debian.org>
+Date:   Sat Apr 17 01:30:15 2010 +0200
+
+    Include exevents.h for XIGetKnownProperty
+    
+    Fixes this compiler warning:
+    vmmouse.c: In function ‘VMMouseDeviceControl’:
+    vmmouse.c:734: warning: implicit declaration of function ‘XIGetKnownProperty’
+    
+    Signed-off-by: Julien Cristau <jcristau@debian.org>
+
 commit 01f03ca8fbca96957d6c2718f4279e31cb406c2f
 Author: Peter Hutterer <peter.hutterer@who-t.net>
 Date:   Fri Apr 9 08:30:26 2010 +1000
