--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xserver-xorg-input-vmmouse (1:12.6.9-2) UNRELEASED; urgency=low
+
+  * Pull from upstream master branch up to commit 833698b3b98
+    - Fixed an issue where vmmouse was matched against the non-event device
+      as well causing it to load multiple times and get stuck.
+
+ -- Robert Hooker <sarvatt@ubuntu.com>  Fri, 04 Jun 2010 03:05:36 -0400
+
 xserver-xorg-input-vmmouse (1:12.6.9-1) unstable; urgency=low
 
   [ Julien Cristau ]
